--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "Howard",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.2"
-  }
+  },
+  "devDependencies": {}
 }
